objects/GenAIGtwyObjRecord__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>Key Qualifier Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>Key Qualifier Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metadata__c</fullName>
        <label>Metadata</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordId__c</fullName>
        <label>Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303793132_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIGtwyObjRecord_parent_map_GenAIG_rel</label>
        <referenceTo>GenAIGatewayRequest__dlm</referenceTo>
        <relationshipLabel>GenAIGtwyObjRecord_parent_map_GenAIG_rel</relationshipLabel>
        <relationshipName>rel_1753303793132_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rel_1753303809843_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIGtwyObjRecord_parent_map_GenAIF_rel</label>
        <referenceTo>GenAIFeedback__dlm</referenceTo>
        <relationshipLabel>GenAIGtwyObjRecord_parent_map_GenAIF_rel</relationshipLabel>
        <relationshipName>rel_1753303809843_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>Value</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>